--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
   	<head>
@@ -9,12 +10,13 @@
 			body
 			{
 			  	font: 10px arial;
-			  	background-color:  rgb(250, 250, 250);
+			  	background-color:  rgb(255, 255, 255);
 			}
 
 			.wrapper {
 			  display: grid;
-			  grid-template-columns: repeat(2, 1fr);
+			  //grid-template-columns: repeat(2, 1fr);
+			  grid-template-columns: repeat(auto-fill,minmax(120px, 1fr));
 			  grid-gap: 10px;
 			  grid-auto-rows: minmax(100px, auto);
 			}
@@ -30,8 +32,8 @@
 
 			var gauges = [];
 			var pv_settings_ = [];
-
-			/////////////////////////////////////////////////////////////////////////////////////////
+			var parameters_ = {class: "", "show_labels": "true"};
+/////////////////////////////////////////////////////////////////////////////////////////
 			/////////////////////////////////////////////////////////////////////////////////////////
 
 			//init called once body has loaded
@@ -69,14 +71,17 @@
 					var divtemp = document.createElement('div');
 					//divtemp.style.color = "white";
 					divtemp.style.fontSize = "auto";
-					divtemp.innerHTML = "<p id='p-" + pv + "'>" + pv + "</p>";
+					if (parameters_["show_labels"] == "true")
+						divtemp.innerHTML = "<center id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "</center>";
+					else
+						divtemp.innerHTML = "";
 					divtemp.id = "gauge-div-" + pv_number;
 					divtemp.style.width = "100%";
 					divtemp.style.height = "100%";
 					div.appendChild(divtemp);
 
 					//var max_size = Math.min(window.innerHeight, window.innerWidth) / Math.max(rows, columns);
-					var max_size = Math.min(window.innerHeight - 60, window.innerWidth) / Object.keys(widget.PVList).length;
+					var max_size = Math.max(window.innerHeight, window.innerWidth) / Object.keys(widget.PVList).length;
 
 					var label = pv_settings_[pv] !== undefined ? pv_settings_[pv].Units : "";
 					var min   = pv_settings_[pv] !== undefined ? pv_settings_[pv].Lower_Display_Limit !== "DC'd" ? parseInt(pv_settings_[pv].Lower_Display_Limit) : 0 : 0;
@@ -95,27 +100,32 @@
 
 			function getParameters()
 			{
-				parameters = [];
-
-				return parameters;
+				return parameters_;
 			}
 
 			function setParameters(attributes)
 			{
-				
+				parameters_ = attributes;
+				console.log("thermometer: set parameters()");
+				console.log(parameters_);
 			}
 
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
 				console.log("Gauge newValue() reached", pvName, pvValue);
-				var pv = "p-" + pvName;
-
-				if(pvSeverity == "MAJOR" )
-					document.getElementById(pv).innerHTML = "<left style = 'color: red'>" + pvName + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</left>";
-				else if(pvSeverity == "MINOR")
-					document.getElementById(pv).innerHTML = "<left style = 'color: orange'>" + pvName + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</left>";
+					var pv = "p-" + pvName;
+	
+				if (parameters_["show_labels"] == "true")
+				{
+					if(pvSeverity == "MAJOR" )
+						document.getElementById(pv).innerHTML = "<center style = 'color: red'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+					else if(pvSeverity == "MINOR")
+						document.getElementById(pv).innerHTML = "<center style = 'color: orange'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+					else
+						document.getElementById(pv).innerHTML = "<center style = 'color: green'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+				}
 				else
-					document.getElementById(pv).innerHTML = "<left style = 'color: green'>" + pvName + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</left>";
+					document.getElementById(pv).innerHTML = "";
 
 				gauges[pvName].redraw(pvValue);
 				gauges[pvName].body[0][0].parentElement.title = window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
