Checkpoint in File pane cleanup

--- a/WebGUI/html/SlowControlsDashboardFileTree.html
+++ b/WebGUI/html/SlowControlsDashboardFileTree.html
@@ -8,45 +8,49 @@
 		<style type="text/css">
 
 		body {
-			background-color: rgba(250,250,250,0.8);
+			background-color: 				rgba(250,250,250,0.8);
+		}
+
+		body * {
+			font-family: 					"Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
 		}
 
 		button {
-			background-color: #52a8e8;
-			background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #52a8e8), color-stop(100%, #377ad0));
-			background-image: -webkit-linear-gradient(top, #52a8e8, #377ad0);
-			background-image: -moz-linear-gradient(top, #52a8e8, #377ad0);
-			background-image: -ms-linear-gradient(top, #52a8e8, #377ad0);
-			background-image: -o-linear-gradient(top, #52a8e8, #377ad0);
-			background-image: linear-gradient(top, #52a8e8, #377ad0);
-			border-top: 1px solid #4081af;
-			border-right: 1px solid #2e69a3;
-			border-bottom: 1px solid #20559a;
-			border-left: 1px solid #2e69a3;
-			border-radius: 16px;
-			-webkit-box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-			box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-			color: #fff;
-			font: normal 11px/1 "lucida grande", sans-serif;
-			padding: 3px 5px;
-			text-align: center;
-			text-shadow: 0 -1px 1px #3275bc;
-			width: 100%;
-			-webkit-background-clip: padding-box;
+			background-color: 				#52a8e8;
+			background-image: 				-webkit-gradient(linear, left top, left bottom, color-stop(0%, #52a8e8), color-stop(100%, #377ad0));
+			background-image: 				-webkit-linear-gradient(top, #52a8e8, #377ad0);
+			background-image: 				-moz-linear-gradient(top, #52a8e8, #377ad0);
+			background-image: 				-ms-linear-gradient(top, #52a8e8, #377ad0);
+			background-image: 				-o-linear-gradient(top, #52a8e8, #377ad0);
+			background-image: 				linear-gradient(top, #52a8e8, #377ad0);
+			border-top: 					1px solid #4081af;
+			border-right: 					1px solid #2e69a3;
+			border-bottom: 					1px solid #20559a;
+			border-left: 					1px solid #2e69a3;
+			border-radius: 					16px;
+			-webkit-box-shadow: 			inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
+			box-shadow: 					inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
+			color: 							#fff;
+			font: 							normal 11px/1 "lucida grande", sans-serif;
+			padding: 						3px 5px;
+			text-align: 					center;
+			text-shadow: 					0 -1px 1px #3275bc;
+			width: 							100%;
+			-webkit-background-clip: 		padding-box;
 		}
 
 		button:hover {
-			background: #2a81d7;
-			background: -moz-linear-gradient(0% 100% 90deg, #206bcb, #3e9ee5);
-			background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3e9ee5), to(#206bcb));
-			border-top: 1px solid #2a73a6;
-			border-right: 1px solid #165899;
-			border-bottom: 1px solid #07428f;
-			border-left: 1px solid #165899;
-			-moz-box-shadow: inset 0 1px 0 0 #62b1e9;
-			-webkit-box-shadow: inset 0 1px 0 0 #62b1e9;
-			cursor: pointer;
-			text-shadow: 0 -1px 1px #1d62ab;
+			background: 					#2a81d7;
+			background: 					-moz-linear-gradient(0% 100% 90deg, #206bcb, #3e9ee5);
+			background: 					-webkit-gradient(linear, 0% 0%, 0% 100%, from(#3e9ee5), to(#206bcb));
+			border-top: 					1px solid #2a73a6;
+			border-right: 					1px solid #165899;
+			border-bottom: 					1px solid #07428f;
+			border-left: 					1px solid #165899;
+			-moz-box-shadow:				inset 0 1px 0 0 #62b1e9;
+			-webkit-box-shadow: 			inset 0 1px 0 0 #62b1e9;
+			cursor: 						pointer;
+			text-shadow: 					0 -1px 1px #1d62ab;
 		}
 
 		button:active {
@@ -145,7 +149,6 @@
 			background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-document.png) 0 0 no-repeat;
 			color: #000000;
 			padding-left: 21px;
-			//color: brgb(255, 204, 0);
 			text-decoration: none;
 			font: none "Helvetica Neue"
 			display: block;
