--- a/WebGUI/html/widgets/thermometer.html
+++ b/WebGUI/html/widgets/thermometer.html
@@ -52,7 +52,6 @@
 
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<script type="text/javascript" src="libraries/thermometer.js"></script>
-		<script type="text/JavaScript" src="/WebPath/js/js_lib/widgetAPI.js"></script>
 		<script>
 
 			//functions:
@@ -105,9 +104,9 @@
 					//divtemp.style.color = "white";
 					//divtemp.style.fontSize = "auto"; //"3vw";
 					if (parameters_["show_labels"] == "true")
-						divtemp.innerHTML = "<center>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />");
+						divtemp.innerHTML = "<center>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br />WAITING A NEW PV VALUE...";
 					else
-						divtemp.innerHTML = "";
+						divtemp.innerHTML = "WAITING A NEW PV VALUE...";
 					console.log(pv.replace(" ", ""));
 					//divtemp.style.width = "100%";
 					//divtemp.style.height = "100%";
@@ -144,7 +143,8 @@
 			function newValue(pvName, pvValue, pvTime, pvStatus, pvSeverity)
 			{
 				console.log("Thermometer newValue() reached", pvName, pvValue);
-				var now = Math.floor(Date.now());
+				var now = Math.floor(Date.now())/1000;
+				var time2compare = pvTime*1. + 240.;
 
 				var min   = pv_settings_[pvName] !== undefined ? pv_settings_[pvName].Lower_Display_Limit !== "DC'd" ? parseInt(pv_settings_[pvName].Lower_Display_Limit) : 0 : 0;
 				var max   = pv_settings_[pvName] !== undefined ? pv_settings_[pvName].Upper_Display_Limit !== "DC'd" ? parseInt(pv_settings_[pvName].Upper_Display_Limit) : 0 : 0;
@@ -157,10 +157,13 @@
 					else if(pvSeverity == "MINOR")
 						containers[pvName].innerHTML = "<center style = 'color: orange'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
 					else
-						if (pvTime == undefined || pvTime + 10000 < now)
-							 containers[pvName].innerHTML = "<center style = 'color: grey'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
-						else
+						if ((pvTime !== undefined) && (time2compare > now))
 							containers[pvName].innerHTML = "<center style = 'color: green'>" + pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity + "</center>";
+						else
+							containers[pvName].innerHTML = "<center style = 'color: grey'>"
+															+ pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />")
+															+ "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity
+															+ "<br>NOT UPDATED FOR MORE THAN " + parseInt((now - pvTime*1.)/60) + " MINUTES</center>";
 				}
 				else
 					containers[pvName].innerHTML = "<center>";
@@ -168,14 +171,11 @@
 				thermometers[pvName].render(containers[pvName],	pvValue, min, max);
 				thermometers[pvName]._svg._groups[0][0].parentElement.title = window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
 
-				var now2 =  widgetAPI.getDateString(new Date((pvTime | 0) * 1000));
-
-				console.log("thermometer date now: " + now + " pvtime: " + pvTime + " refresh rate: ");
-				console.log("thermometer date now: " + now2);
-				if (pvTime == undefined || pvTime + 10000 < now)
-					thermometers[pvName]._svg._groups[0][0].parentElement.style.backgroundColor = 'lightgrey';
-				else
+				console.log("thermometer date now: " + now + " pvtime: " + pvTime + " refresh rate: 10 sec");
+				if ((pvTime !== undefined) && (time2compare > now))
 					thermometers[pvName]._svg._groups[0][0].parentElement.style.backgroundColor = 'white';
+				else
+					thermometers[pvName]._svg._groups[0][0].parentElement.style.backgroundColor = 'lightgrey';
 			}
 
 			function drawThermometer(name, container, wdth, hght, val, min, max)
