--- a/WebGUI/html/widgets/gauge_widget.html
+++ b/WebGUI/html/widgets/gauge_widget.html
@@ -72,9 +72,9 @@
 					//divtemp.style.color = "white";
 					divtemp.style.fontSize = "auto";
 					if (parameters_["show_labels"] == "true")
-						divtemp.innerHTML = "<center id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "</center>";
+						divtemp.innerHTML = "<center id='p-" + pv + "'>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...</center>";
 					else
-						divtemp.innerHTML = "";
+						divtemp.innerHTML = "WAITING FOR A NEW PV VALUE...";
 					divtemp.id = "gauge-div-" + pv_number;
 					divtemp.style.width = "100%";
 					divtemp.style.height = "100%";
