--- a/WebGUI/html/widgets/thermometer.html
+++ b/WebGUI/html/widgets/thermometer.html
@@ -104,9 +104,9 @@
 					//divtemp.style.color = "white";
 					//divtemp.style.fontSize = "auto"; //"3vw";
 					if (parameters_["show_labels"] == "true")
-						divtemp.innerHTML = "<center>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br />WAITING A NEW PV VALUE...";
+						divtemp.innerHTML = "<center>" + pv.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />") + "<br />WAITING FOR A NEW PV VALUE...";
 					else
-						divtemp.innerHTML = "WAITING A NEW PV VALUE...";
+						divtemp.innerHTML = "WAITING FOR A NEW PV VALUE...";
 					console.log(pv.replace(" ", ""));
 					//divtemp.style.width = "100%";
 					//divtemp.style.height = "100%";
@@ -144,7 +144,7 @@
 			{
 				console.log("Thermometer newValue() reached", pvName, pvValue);
 				var now = Math.floor(Date.now())/1000;
-				var time2compare = pvTime*1. + 240.;
+				var time2compare = pvTime*1. + 24.;
 
 				var min   = pv_settings_[pvName] !== undefined ? pv_settings_[pvName].Lower_Display_Limit !== "DC'd" ? parseInt(pv_settings_[pvName].Lower_Display_Limit) : 0 : 0;
 				var max   = pv_settings_[pvName] !== undefined ? pv_settings_[pvName].Upper_Display_Limit !== "DC'd" ? parseInt(pv_settings_[pvName].Upper_Display_Limit) : 0 : 0;
@@ -162,7 +162,7 @@
 						else
 							containers[pvName].innerHTML = "<center style = 'color: grey'>"
 															+ pvName.replace(/[&\/\\#,+()$~%.'":*?<>{}]/g, "<br />")
-															+ "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity
+															//+ "<br>Status: " + pvStatus + "<br>Severity: " + pvSeverity
 															+ "<br>NOT UPDATED FOR MORE THAN " + parseInt((now - pvTime*1.)/60) + " MINUTES</center>";
 				}
 				else
